--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -672,6 +672,17 @@ img.team-img{
     font-size: 2.5rem;
     font-weight: 700;
   }
+  #navbar li {
+    list-style: none;
+    padding: 0 20px;
+    position: absolute;
+    left: 10%;
+    top:0%;
+  }
+  #hero {
+    height: max-content;
+    padding-bottom: 10%;
+  }
 }
 html,body{
   width:100%;
