--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -694,6 +694,10 @@ img.team-img{
   color: antiquewhite;
   font-weight: 800;
 }
+  .wrapper {
+  width: 300px;
+  height: 360px;
+ }
 }
 
 @media screen and (min-width: 600px) and (max-width: 1200px) {
